--- a/Tuesday/index.html
+++ b/Tuesday/index.html
@@ -1,15 +1,51 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
    
     <title>Ahren's Doc</title>
+
+    <link rel="stylesheet" type="text/css"
+          href="./css/stylesheet.css "  >
 
 </head>
 
 <body>
 
-<h1> To Link an element we use an Anchor tag</h1>
+  <!-- SEMANTIC ELEMENT -->
+
+<header> 
+
+    <h1> Musical Intrument Sales</h1>
+    <h5> Ahren Wagner is working on building this</h5>
+
+
+</header>
+
+<main> 
+
+  <aside> 
+  <h5>Menu</h5>
+    <ul>
+    <li> History of guitar </li>
+    <li> gallery </li>
+    <li> Contact me</li>
+  </ul>
+
+  </aside>
+
+  <section id="historySection" >
+
+    <h5> About the guitar</h5>
+
+    <p>
+
+      The guitar is classified as a chordophone – meaning the sound is produced by a vibrating string stretched between two fixed points. Historically, a guitar was constructed from wood 
+
+
+    </p>
+
+
+  </section>
 
 <a href ="https://www.boesendorfer.com/en" 
 
@@ -18,25 +54,6 @@
   Click here to go buy a piano!
 
 </a>
-<p> </p>
-
-<a href="#guitar" >Click to check the guitar!</a>
-
-<!-- Today's challenge
-
-Add a photo
-Adjust the size
-add an internal and external link!
--->
-
-
-
-
-
-
-
-
-
 
   <img 
 
@@ -45,6 +62,23 @@ add an internal and external link!
   width="800px"
   >
 
+</main> 
+
+<footer>
+
+    <h4> The footer section is a great place for contact details etc</h4>
+
+    <ul>
+      <li>
+        for inquiries: Contact me on 1234567890
+      </li>
+      <li>
+
+      </li>
+    </ul>
+
+
+</footer>
 
     
 </body>
