--- a/Tuesday/index.html
+++ b/Tuesday/index.html
@@ -5,7 +5,9 @@
     <title>Ahren's Doc</title>
 
     <link rel="stylesheet" type="text/css"
-          href="./css/stylesheet.css "  >
+          href="./css/stylesheet.css"  >
+  
+   
 
 </head>
 
@@ -15,8 +17,9 @@
 
 <header> 
 
-    <h1> Musical Intrument Sales</h1>
-    <h5> Ahren Wagner is working on building this</h5>
+    <h1 > CSS STANDS FOR CASCADING STYLE SHEET</h1>
+    <h1 > We're learning about CSS today!</h1>
+    <h5 > Ahren Wagner is working on building this</h5>
 
 
 </header>
@@ -24,7 +27,7 @@
 <main> 
 
   <aside> 
-  <h5>Menu</h5>
+  <h5  >Menu</h5>
     <ul>
     <li> History of guitar </li>
     <li> gallery </li>
@@ -35,12 +38,19 @@
 
   <section id="historySection" >
 
-    <h5> About the guitar</h5>
+    <h5 > About the guitar</h5>
 
-    <p>
+    <p id="specificNote" >
 
       The guitar is classified as a chordophone – meaning the sound is produced by a vibrating string stretched between two fixed points. Historically, a guitar was constructed from wood 
 
+
+    </p>
+
+    <p class="aboutText">
+
+      Learning to play guitar  can be challenging
+      But great!
 
     </p>
 
@@ -59,7 +69,7 @@
 
   id="guitar"
   src="images/exampleImage.jpg"
-  width="800px"
+  width="400px"
   >
 
 </main> 
@@ -69,7 +79,7 @@
     <h4> The footer section is a great place for contact details etc</h4>
 
     <ul>
-      <li>
+      <li class="aboutText" >
         for inquiries: Contact me on 1234567890
       </li>
       <li>
@@ -84,3 +94,25 @@
 </body>
 
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+
+  <h1> This is an example!</h1>
+
+  <h3> Some more text here</h3>
+
+  <p>
+    Here is a pargraph so we can try change some things!
+  </p>
+  
+</body>
+</html>
+
